removes warning