@@ -1,7 +1,8 @@
 package com.oocode;
 
 import java.io.IOException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.Scanner;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
@@ -9,9 +10,11 @@ import static java.nio.charset.StandardCharsets.UTF_8;
 public class SimpleHttpClient implements HttpClient {
     @Override
     public String readUrl(String url) throws IOException {
-        try (Scanner scanner = new Scanner(new URL(url).openStream(), UTF_8)) {
+        try (Scanner scanner = new Scanner(new URI(url).toURL().openStream(), UTF_8)) {
             scanner.useDelimiter("\\A");
             return scanner.hasNext() ? scanner.next() : "";
+        } catch (URISyntaxException e) {
+            throw new IOException(e);
         }
     }
 }
